--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
   "name": "audio-drop",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Telegram bot for extracting audio from YouTube videos",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write ."
   },
-  "keywords": [],
+  "keywords": ["telegram", "bot", "youtube", "audio"],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "grammy": "^1.32.0",
+    "fastify": "^5.2.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.10.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2"
+  },
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
