fix: update yt-dlp to latest version and add user-agent

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# Telegram Bot Token (получить у @BotFather)
+# Telegram Bot Token (get from @BotFather)
 BOT_TOKEN=your_bot_token_here
 
-# HTTP server port для health checks
+# HTTP server port for health checks
 PORT=3000
 
 # Node environment
