feat: embed WARP proxy in single container

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ NODE_ENV=production
 
 # Log level (debug, info, warn, error)
 LOG_LEVEL=info
+
+# WARP proxy URL (optional, auto-configured in Docker)
+# WARP_PROXY_URL=socks5://localhost:1080
