--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,15 @@ services:
       - BOT_TOKEN=${BOT_TOKEN}
       - PORT=3000
       - LOG_LEVEL=${LOG_LEVEL:-info}
+      - WARP_PROXY_URL=socks5://localhost:1080
+    volumes:
+      - warp-data:/app/.warp
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
     logging:
       driver: "json-file"
       options:
@@ -33,3 +36,6 @@ services:
         reservations:
           cpus: '0.5'
           memory: 256M
+
+volumes:
+  warp-data:
