feat: add YouTube cookies

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,9 @@ NODE_ENV=production
 # Log level (debug, info, warn, error)
 LOG_LEVEL=info
 
-# WARP proxy URL (optional, auto-configured in Docker)
+# WARP proxy URL (auto-configured in Docker)
 # WARP_PROXY_URL=socks5://localhost:1080
+
+# YouTube cookies (required for bypassing bot detection)
+# Export from browser using cookies.txt extension, paste entire content
+# YOUTUBE_COOKIES=# Netscape HTTP Cookie File...
