--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: LOG_LEVEL
-        value: info
+        value: debug
       - key: PORT
         value: 3000
       - key: WARP_PROXY_URL
