fix: ios client

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ LOG_LEVEL=info
 # WARP proxy URL (auto-configured in Docker)
 # WARP_PROXY_URL=socks5://localhost:1080
 
-# YouTube cookies (required for bypassing bot detection)
+# YouTube cookies (optional, may not work with datacenter IPs)
 # Export from browser using cookies.txt extension, paste entire content
 # YOUTUBE_COOKIES=# Netscape HTTP Cookie File...
+
+# YouTube PO Token (recommended for bypassing bot detection)
+# Generate with: yt-dlp --extractor-args "youtube:player_client=web" --get-po-token
+# YOUTUBE_PO_TOKEN=web+XXXXX...
