--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - PORT=3000
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - WARP_PROXY_URL=socks5://localhost:1080
+      # Uncomment to test iOS client (simpler than web, no cookies needed)
+      # - TEST_IOS_CLIENT=true
     volumes:
       - warp-data:/app/.warp
     healthcheck:
