chore: delete unused code

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,18 @@
-# Telegram Bot Token (get from @BotFather)
+# Telegram Bot Token (required - get from @BotFather)
 BOT_TOKEN=your_bot_token_here
 
-# HTTP server port for health checks
+# Server configuration
 PORT=3000
-
-# Node environment
 NODE_ENV=production
-
-# Log level (debug, info, warn, error)
 LOG_LEVEL=info
 
-# WARP proxy URL (auto-configured in Docker)
-# WARP_PROXY_URL=socks5://localhost:1080
+# Optional: Residential proxy (SOCKS5 or HTTP/HTTPS)
+# Examples: socks5://user:pass@host:port or http://user:pass@host:port
+# PROXY_URL=
 
-# YouTube cookies (optional, may not work with datacenter IPs)
-# Export from browser using cookies.txt extension, paste entire content
-# YOUTUBE_COOKIES=# Netscape HTTP Cookie File...
+# Optional: YouTube cookies (for age-restricted content)
+# Export from browser using cookies.txt extension
+# YOUTUBE_COOKIES=
 
-# YouTube PO Token (recommended for bypassing bot detection)
-# Generate with: yt-dlp --extractor-args "youtube:player_client=web" --get-po-token
-# YOUTUBE_PO_TOKEN=web+XXXXX...
+# Optional: YouTube PO Token (for bypassing bot detection)
+# YOUTUBE_PO_TOKEN=
