feat: add white list

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ PORT=3000
 NODE_ENV=production
 LOG_LEVEL=info
 
+# Optional: Whitelist user IDs (comma-separated, leave empty to allow all)
+# Example: ALLOWED_USER_IDS=376221521,605069519
+# ALLOWED_USER_IDS=
+
 # Optional: Residential proxy (SOCKS5 or HTTP/HTTPS)
 # Examples: socks5://user:pass@host:port or http://user:pass@host:port
 # PROXY_URL=
