--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ NODE_ENV=production
 LOG_LEVEL=info
 
 # Optional: Whitelist user IDs (comma-separated, leave empty to allow all)
-# Example: ALLOWED_USER_IDS=376221521,605069519
+# Example: ALLOWED_USER_IDS=12345,123456
 # ALLOWED_USER_IDS=
 
 # Optional: Residential proxy (SOCKS5 or HTTP/HTTPS)
